--- a/_layouts/base.njk
+++ b/_layouts/base.njk
@@ -8,6 +8,7 @@ title: Under The Bricks
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }}</title>
+    <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;700&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/main.css"/>
   </head>
     <body>
