--- a/styles/main.scss
+++ b/styles/main.scss
@@ -10,6 +10,7 @@ body {
 .utb-landing {
   align-items: center;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   height: 100vh;
   width: 100vw;
@@ -18,7 +19,32 @@ body {
 .utb-logo {
   fill: #FFFFFF;
   height: 100%;
-  max-height: 50vh;
+  max-height: 40vh;
   max-width: 50vw;
   width: 100%;
+}
+
+.utb-title {
+  color: #FFFFFF;
+  font-family: $utb-font-family-sans-serif;
+  font-size: 10vw;
+  margin-bottom: 2vh;
+  @media screen and (min-width: 1024px) {
+    font-size: 7vw;
+  }
+}
+
+.utb-link {
+  font-family: $utb-font-family-sans-serif;
+  font-size: 7vw;
+  display: block;
+  cursor: pointer;
+  width: 100%;
+  text-align: center;
+  margin-top: 2vh;
+  color: $utb-color-palette-white;
+
+  @media screen and (min-width: 1024px) {
+    font-size: 5vw;
+  }
 }
